@@ -19,13 +19,16 @@
  */
 package org.apache.hadoop.hbase;
 
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
-import java.io.DataInputStream;
-import java.io.DataOutputStream;
-
 import junit.framework.TestCase;
 
+import org.apache.hadoop.hbase.io.BatchOperation;
+import org.apache.hadoop.hbase.io.BatchUpdate;
+import org.apache.hadoop.hbase.util.Writables;
+import org.apache.hadoop.io.Text;
+
+/**
+ * Test HBase Writables serializations
+ */
 public class TestSerialization extends TestCase {
 
   protected void setUp() throws Exception {
@@ -36,17 +39,50 @@ public class TestSerialization extends TestCase {
     super.tearDown();
   }
 
+  /**
+   * Test ServerInfo serialization
+   * @throws Exception
+   */
   public void testServerInfo() throws Exception {
     HServerInfo hsi = new HServerInfo(new HServerAddress("0.0.0.0:123"), -1,
       1245);
-    ByteArrayOutputStream baos = new ByteArrayOutputStream();
-    DataOutputStream dao = new DataOutputStream(baos);
-    hsi.write(dao);
-    dao.close();
-    ByteArrayInputStream bais = new ByteArrayInputStream(baos.toByteArray());
-    DataInputStream dis = new DataInputStream(bais);
-    HServerInfo deserializedHsi = new HServerInfo();
-    deserializedHsi.readFields(dis);
+    byte [] b = Writables.getBytes(hsi);
+    HServerInfo deserializedHsi =
+      (HServerInfo)Writables.getWritable(b, new HServerInfo());
     assertTrue(hsi.equals(deserializedHsi));
+  }
+  
+  /**
+   * Test BatchUpdate serialization
+   * @throws Exception
+   */
+  public void testBatchUpdate() throws Exception {
+    final Text testName = new Text(getName());
+    // Add row named 'testName'.
+    BatchUpdate bu = new BatchUpdate(testName);
+    // Add a column named same as row.
+    bu.put(testName, testName.getBytes());
+    byte [] b = Writables.getBytes(bu);
+    BatchUpdate bubu =
+      (BatchUpdate)Writables.getWritable(b, new BatchUpdate());
+    // Assert rows are same.
+    assertTrue(bu.getRow().equals(bubu.getRow()));
+    // Assert has same number of BatchOperations.
+    int firstCount = 0;
+    for (@SuppressWarnings("unused")
+    BatchOperation bo: bubu) {
+      firstCount++;
+    }
+    // Now deserialize again into same instance to ensure we're not
+    // accumulating BatchOperations on each deserialization.
+    BatchUpdate bububu = (BatchUpdate)Writables.getWritable(b, bubu);
+    // Assert rows are same again.
+    assertTrue(bu.getRow().equals(bububu.getRow()));
+    int secondCount = 0;
+    for (@SuppressWarnings("unused")
+    BatchOperation bo: bububu) {
+      secondCount++;
+    }
+    assertEquals(firstCount, secondCount);
   }
 }
