@@ -16,6 +16,7 @@ HBase Change Log
    HBASE-563   TestRowFilterAfterWrite erroneously sets master address to
                0.0.0.0:60100 rather than relying on conf
    HBASE-544   filters generate StackOverflowException
+   HBASE-567   Reused BatchUpdate instances accumulate BatchOperations
 
   NEW FEATURES
    HBASE-548   Tool to online single region
